--- a/frontend/src/Styles/Components/EditArtifactModal.module.css
+++ b/frontend/src/Styles/Components/EditArtifactModal.module.css
@@ -1,5 +1,4 @@
-/* src/Components/AddArtifactLevelingModal.css */
-.leveling-modal {
+.modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -9,21 +8,29 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 1000; /* Ensure the modal is on top of other elements */
   }
   
-  .leveling-modal-content {
+  .modal_content {
     background-color: white;
     padding: 20px;
     border-radius: 10px;
     width: 80%;
     max-width: 600px;
-    max-height: 95%;
-    overflow-y: auto;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-height: 95%; /* Ensure the modal doesn't exceed the viewport height */
+    overflow-y: auto; /* Add scroll if content exceeds modal height */
   }
   
+  .modal_actions {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+  }
   
+  .modal_actions .button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+  }
 
 
   .form {
@@ -75,3 +82,11 @@
     background-color: #45a049;
   }
 
+  .checkboxLabel {
+    display: block;
+    margin-bottom: 8px;
+}
+
+.checkbox {
+    margin-right: 10px;
+}
