--- a/frontend/src/Styles/Components/LevelingChartTable.module.css
+++ b/frontend/src/Styles/Components/LevelingChartTable.module.css
@@ -1,61 +1,61 @@
 /* src/Components/ChartTable.css */
-.chart-table-container {
+.substat_chart_table_container {
     display: flex;
     justify-content: space-between;
     width: 100%;
     margin-top: 20px;
   }
   
-  .chart-container {
+  .chart_container {
     flex: 1;
     margin-right: 20px;
   }
   
-  .chart-container h2 {
+  .chart_container h2 {
     text-align: center;
     margin-bottom: 20px;
   }
   
-  .pie-chart, .bar-chart {
+  .pie_chart, .bar_chart {
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
-  .pie-chart canvas, .bar-chart canvas {
+  .pie_chart canvas, .bar_chart canvas {
     max-width: 55vw; /* Adjust the size as needed */
     max-height: 55vh; /* Adjust the size as needed */
   }
   
-  .table-container {
+  .table_container {
     flex: 1;
     margin-left: 20px;
   }
   
-  .table-container h2 {
+  .table_container h2 {
     text-align: center;
     margin-bottom: 20px;
   }
   
-  .table-container table {
+  .table_container table {
     width: 100%;
     border-collapse: collapse;
   }
   
-  .table-container th, .table-container td {
+  .table_container th, .table_container td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: center;
   }
   
-  .table-container th {
+  .table_container th {
     background-color: #f2f2f2;
   }
   
-  .table-container tr:nth-child(even) {
+  .table_container tr:nth-child(even) {
     background-color: #f9f9f9;
   }
   
-  .table-container tr:hover {
+  .table_container tr:hover {
     background-color: #f1f1f1;
   }
